Eliminar estado abierto de rollos
